[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Fonts/OpenType-TT/UT Shadigo Trial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/background_mainmenu.jpeg" type="Texture" id=3]
[ext_resource path="res://Scenes/Credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/main_menu.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.785034
margin_right = -0.785034
margin_bottom = 15.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = 3.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 100.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 104.0
margin_right = 1024.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 2 )
text = "The Illusion Choice"
align = 1
valign = 1

[node name="Start" type="Button" parent="."]
anchor_left = 0.79
anchor_top = 0.64
anchor_right = 0.79
anchor_bottom = 0.64
margin_left = -48.8859
margin_top = -20.0
margin_right = 45.1141
margin_bottom = 13.0
custom_fonts/font = SubResource( 3 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="."]
anchor_left = 0.79
anchor_top = 0.7
anchor_right = 0.79
anchor_bottom = 0.7
margin_left = -47.96
margin_top = -20.0
margin_right = 46.04
margin_bottom = 13.0
custom_fonts/font = SubResource( 4 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.789
anchor_top = 0.76
anchor_right = 0.789
anchor_bottom = 0.76
margin_left = -46.936
margin_top = -20.0
margin_right = 47.064
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsMenu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="IntroMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="exit_credits_menu" from="CreditsMenu" to="." method="_on_CreditsMenu_exit_credits_menu"]
